--- a/analysis/reports/report_ru.Rmd
+++ b/analysis/reports/report_ru.Rmd
@@ -58,28 +58,28 @@ maxmsbgdiff <- unlist(strsplit(as.character(maxmsbgdiff), " "))[2]
 Вторая оценка &mdash; это оценка пользователей (user score), рассчитывающаяся как среднее арифметическое оценок, введённых зарегистрированными пользователями Metacritic. 
 Целью данного исследования является описательный анализ и визуализация данных Metacritic из категории "Игры для ПК" (PC Games), 
 выбранной для исследования ввиду наибольшей длительности жизненного цикла ПК как игровой платформы. 
-Данные рассматриваются в разрезе по времени, по игровому жанру и др., сравниваются оценки пользователей и критиков, выявляются закономерности.
-Предпосылкой исследования являются две гипотезы: первая &mdash; что в большинстве случае оценки критиков и оценки пользователей значительно расходятся, 
+Данные рассматриваются в разрезе по времени, по игровому жанру и др., сравниваются оценки пользователей (ОП) и критиков (ОК), выявляются закономерности.
+Предпосылкой исследования являются две гипотезы: первая &mdash; что в большинстве случае ОК и ОК значительно расходятся, 
 и вторая &mdash; что в среднем пользователи оценивают игры, выпущенные до 2000 года выше игр, выпущенных после этой даты.
 
 ## Методы исследования
 
-Сбор данных с сайта www.metacritic.com был произведён 19 октября 2014 года с помощью фреймворка Scrapy.
-Для каждой игры были извлечены: название, оценка пользователей, количество оценок пользователей, оценка критиков, количество оценок критиков, 
+Сбор данных с сайта metacritic.com был произведён 19 октября 2014 года с помощью фреймворка Scrapy.
+Для каждой игры были извлечены: название, ОП, количество ОП, ОК, количество ОК, 
 издатель, год издания, разработчик, платформа, жанр, тэги, возрастной рейтинг, ссылка.
 Затем полученные данные обрабатывались средствами описательной статистики языка программирования R.
-Исходный код для извлечения и анализа данааых доступны по адресу: is.gd/metacritic_code; набор данных в формате, поддерживаемом MS Excel, 
+Исходный код для извлечения и анализа данных доступны по адресу: is.gd/metacritic_code; набор данных в формате, поддерживаемом MS Excel, 
 по адресу is.gd/metacritic_xls.
 
 ## Результаты
 
 Общее число игр, представленных на Metacritic для платформы "Персональный компьютер", составляет `r nrow(games)`.
-Как оценки пользователей (мода = `r mfv(games$user_score)[1]`), так и оценки критиков (мода = `r mfv(games$metascore)[1]`) 
+Как ОП (мода = `r mfv(games$user_score)[1]`), так и ОК (мода = `r mfv(games$metascore)[1]`) 
 не являются нормально распределёнными согласно критерию Шапиро-Уилка.
 По годам игры распределены неравномерно: в 1994 представлена одна игра, в 2013 достигнут максимум &mdash; `r max(table(year(games$release_date)))` игры.
 Число оценок растёт от года к году: от `r min(sum_score_count_by_date$user_reviews_count)` ОП и `r min(sum_score_count_by_date$critics_reviews_count)` ОК в 1994 
 до `r max(sum_score_count_by_date$user_reviews_count)` ОП и `r max(sum_score_count_by_date$critics_reviews_count)` ОК в 2013. 
-В одномерной линейной модели год издания значимо связан с оценками пользователей (P < 0.0001), с коэф. B = `r coef(with(games, lm(user_score ~ year(release_date))))[2]` 
+В одномерной линейной модели год издания значимо связан с ОП (P < 0.0001), с коэф. B = `r coef(with(games, lm(user_score ~ year(release_date))))[2]` 
 и R^2 = `r round(summary.lm(with(games, lm(user_score ~ year(release_date))))$r.squared, digits=3)*100`%.
 Таким образом, чем раньше выпущена игра, тем выше её оценивают пользователи (см рис.1).
 ```{r medianscorebydate}
@@ -92,7 +92,7 @@ geom_point(aes(shape=variable), size=5) + coord_cartesian(ylim = c(65, 100)) +
 theme_bw() + theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
 xlab("Год") + ylab("Медиана оценки") + ggtitle("Медиана оценок критиков \n и медиана оценок пользователей по годам")
 ```
-Наблюдается существенная разница между медианой оценок пользователей и медианой оценок критиков.
+Наблюдается существенная разница между медианой ОП и медианой ОК.
 В разрезе по жанрам максимальная разница наблюдается для жанра `r maxmsbgdiff` и составляет `r max(msbgdiff$scorediff)` баллов.
 В разрезе по издателям также имеется расхождение между ОП и ОК; на рис. 2 показана разница между медианами ОП и ОК для 30 издателей из верхней квартили 
 по числу ОП (т.е. издателей, игры которых получили наибольшее внимание пользователей Metacritic).
@@ -123,7 +123,7 @@ score_diff_by_games <- transform(games, scorediff = abs(metascore-user_score))[,
 Полученные данные свидетельствуют о значительных расхождениях между оценками пользователей и оценками критиков в большинстве случаев.
 Также подтверждается гипотеза об отрицательной корреляции между годом выпуска игры и её оценкой.
 В целом, возникает сомнение в репрезентативности данных Metacritic. 
-Источники данных, как в части профессиональных рецензий, так и в части пользовательских данных, не имют явного формализованного контроля.
+Источники данных, как в части профессиональных рецензий, так и в части пользовательских данных, не имеют явного формализованного контроля.
 Методика расчёта оценок далека от прозрачности, математической точности и универсальности, декларируемой разработчиками Metacritic. 
 Актуальной задачей на будущее видится сбор большего количества данных, более глубокий анализ предвзятости критиков, связи их оценок с конкретными издателями, охват большего числа платформ, сравнение данных Metacritic с данными аналогичных порталов.
 
